Added mythos HB2, HB3 and HB4

--- a/public/index.html
+++ b/public/index.html
@@ -108,6 +108,9 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenClueCrossedOut.14ed79574c178f07ac1a.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenEldritch.0a81fd93b1e51e6b947c.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenEldritchFaded.8eb8f59da4cea6442eaa.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenEldritchDarkened.0c2a4789bd1f3794ee17.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenHealth.ef024d0b49bc3b6c1666.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenHealthDarkened.a8014188af4572579aaf.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenFlip.e4bd593cf6472d06509c.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenSanity.6122752e858cc4ca3d70.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenGate.0e592c151182bbe06cd1.png" />
@@ -115,6 +118,7 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenKilling.a39d16b75ff1c5861163.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenMinus.296a3ed2e38434e6ed2f.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenPlus.af35ee150ad428369a38.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenMonsterToughness.be518e8440f70c2e9a94.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenDelayedInvestigator.984a708bbe7ef6a11e13.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenCthylla.2d124ad2e78fb0f9423e.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenCthyllaSlayed.a6bb886c42d1f698f0a7.png" />
@@ -122,6 +126,7 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenCthulhuSlayed.5d3f0055be1926510f2b.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenTickTockMenSlayed.4faa3824f3e4ddc2613e.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenWindWalkerSlayed.a4bf85c24fb75c9ef201.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenSpinnerOfWebsSlayed.59de5c9eb4592b5270e4.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/MythosMattBlue.4e0a74435e013480bbe7.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NG1.0ef45ce08c369379af57.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NG2.1289d13c9eeed82d540d.png" />
@@ -140,6 +145,9 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NB3.6b0391a70e0b151e6a15.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NB4.80a19a8d7ec857460374.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_HB1.345d88ab09d7dab4198e.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_HB2.e6eb05480d7f658c98d3.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_HB3.8dd55515ddcd9dcfce48.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_HB4.4b3f3eebaa3f10213070.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenMonsterToughness.be518e8440f70c2e9a94.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_1.9098007b4303c0722525.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_2.b9d0bfbb6865a0e855c8.png" />
