--- a/public/index.html
+++ b/public/index.html
@@ -127,6 +127,13 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenTickTockMenSlayed.4faa3824f3e4ddc2613e.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenWindWalkerSlayed.a4bf85c24fb75c9ef201.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenSpinnerOfWebsSlayed.59de5c9eb4592b5270e4.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenMonsterToughness.be518e8440f70c2e9a94.png" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenTheAmazon.2349fe8fa9bf8e2f964c.png" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/MythosMattBlue.4e0a74435e013480bbe7.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/MythosMattYellow.daa23264ba9713df2ad2.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NG1.0ef45ce08c369379af57.png" />
@@ -138,6 +145,7 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NG7.47405796e562e3c45f55.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NG8.15ec234b76052974c209.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_HG1.435e6c4be5ac3dbaf48a.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NY8.f27bb7e07e552fd26a13.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_HY1.60a31b110de7e9839e18.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_HY5.c7eab64604da5c8ca0dc.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_EB1.d0896d0e18e6a73ed503.png" />
@@ -151,7 +159,6 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_HB2.e6eb05480d7f658c98d3.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_HB3.8dd55515ddcd9dcfce48.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_HB4.4b3f3eebaa3f10213070.png" />
-    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenMonsterToughness.be518e8440f70c2e9a94.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_1.9098007b4303c0722525.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_2.b9d0bfbb6865a0e855c8.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_3.c60616715d5bcd5b331f.png" />
