New mythos card to add

--- a/public/index.html
+++ b/public/index.html
@@ -136,6 +136,11 @@
     <link rel="preload" as="image" href="" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/MythosMattBlue.4e0a74435e013480bbe7.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/MythosMattYellow.daa23264ba9713df2ad2.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_EG1.f48ab3112230fed9c51b.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_EG2.39cd2cb1dcc263f27fcc.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_EG3.e3a8f099a622baa3af85.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_EG4.6308f46c5837e43f377a.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_EG5.08fefa3fb0f02e2aa371.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NG1.0ef45ce08c369379af57.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NG2.1289d13c9eeed82d540d.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NG3.c6ad09b9b54e304a741a.png" />
@@ -145,11 +150,34 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NG7.47405796e562e3c45f55.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NG8.15ec234b76052974c209.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_HG1.435e6c4be5ac3dbaf48a.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_HG2.4c0bff4ae322ceb83c9e.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_HG3.40852299523ce08c2322.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_HG4.5c8bb817aa52731f1d04.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_HG5.7ec9c024cdae1821dd7b.png" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NY8.f27bb7e07e552fd26a13.png" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_HY1.60a31b110de7e9839e18.png" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_HY5.c7eab64604da5c8ca0dc.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_EB1.d0896d0e18e6a73ed503.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_EB2.c6fa9f235293e3044817.png" />
+    <link rel="preload" as="image" href="" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_EB4.09a4651269c849e849fd.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NB1.5e089a2cb1e88a8665af.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NB2.1cd89bacd82e63170a83.png" />
