New mythos card to add

--- a/public/index.html
+++ b/public/index.html
@@ -154,30 +154,30 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_HG3.40852299523ce08c2322.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_HG4.5c8bb817aa52731f1d04.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_HG5.7ec9c024cdae1821dd7b.png" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_EY1.e433ccf8e890499fdd4d.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_EY2.345490325c472045c004.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_EY3.d396b422b3084d256a0d.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_EY4.a76caac4780ca907597e.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_EY5.838a0da7c2cbba45acc6.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NY1.0b251b3a6f7332223e12.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NY2.0c2b48f91970a6f0c293.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NY3.e5b59bbe3f5820e76823.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NY4.fa847fa0717defdf7e58.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NY5.5927f6e1027b20432728.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NY6.1002aaecb1d3b82dfeed.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NY7.d7d4e2fde073d36f5572.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NY8.f27bb7e07e552fd26a13.png" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NY9.a675d3e656eeaa2c1359.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NY10.d8fe4264f266919fd590.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NY11.98fff67078afd7de03c6.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_HY1.60a31b110de7e9839e18.png" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_HY2.9f2f88fd025ea96d562f.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_HY3.643274997db177875aa8.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_HY4.02ff23408c7235b1e864.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_HY5.c7eab64604da5c8ca0dc.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_EB1.d0896d0e18e6a73ed503.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_EB2.c6fa9f235293e3044817.png" />
-    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_EB3.a15ddb5278b878b32293.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_EB4.09a4651269c849e849fd.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NB1.5e089a2cb1e88a8665af.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NB2.1cd89bacd82e63170a83.png" />
