Added Mythos Defeat card

--- a/public/index.html
+++ b/public/index.html
@@ -187,6 +187,7 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_HB2.e6eb05480d7f658c98d3.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_HB3.8dd55515ddcd9dcfce48.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_HB4.4b3f3eebaa3f10213070.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_Defeat_Card.0550edeee99d6c6f9b2e.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_1.9098007b4303c0722525.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_2.b9d0bfbb6865a0e855c8.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_3.c60616715d5bcd5b331f.png" />
