--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,11 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- <script src="https://cdn.jsdelivr.net/gh/nastyox/Rando.js@master/code/plain-javascript/2.0.0/rando-min.js"></script> -->
     <title>Eldritch Horror</title>
+    <link rel="preload" as="font" href="https://db.onlinewebfonts.com/t/9c96cf75cb04305b353bbb4d876283e5.woff" />
+    <link rel="preload" as="font" href="https://eldritch-horror.onrender.com/static/media/Birmingham.1152147f84a3996710d3.otf" />
+    <link rel="preload" as="font" href="https://eldritch-horror.onrender.com/static/media/BirminghamTitlingBold.364c068f2da7764ab4a4.ttf" />
+    <link rel="preload" as="font" href="https://eldritch-horror.onrender.com/static/media/EldritchHorrorIcons_v2_1.f18782b8e9a553ed6bc7.ttf" />
+    <link rel="preload" as="font" href="https://eldritch-horror.onrender.com/static/media/EldritchNumbers.ef6bc856cc65bfbe29fe.otf" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Eldritch_logo.59bd7715e880198cddfb.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Azathoth.c87edfd070508b6627ae.jpg" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Yog-Sothoth.50cad0e7c4746875b237.jpg" />
