NY8 Card working

--- a/public/index.html
+++ b/public/index.html
@@ -58,13 +58,12 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!-- <script src="https://cdn.jsdelivr.net/gh/nastyox/Rando.js@master/code/plain-javascript/2.0.0/rando-min.js"></script> -->
     <title>Eldritch Horror</title>
-    <link rel="preload" href="https://db.onlinewebfonts.com/t/9c96cf75cb04305b353bbb4d876283e5.woff" as="font" type="font/woff" crossorigin />
+    <!-- <link rel="preload" href="https://db.onlinewebfonts.com/t/9c96cf75cb04305b353bbb4d876283e5.woff" as="font" type="font/woff" crossorigin />
     <link rel="preload" href="https://eldritch-horror.onrender.com/static/media/Birmingham.1152147f84a3996710d3.otf" as="font" type="font/otf" crossorigin />
     <link rel="preload" href="https://eldritch-horror.onrender.com/static/media/BirminghamTitlingBold.364c068f2da7764ab4a4.ttf" as="font" type="font/ttf" crossorigin />
     <link rel="preload" href="https://eldritch-horror.onrender.com/static/media/EldritchHorrorIcons_v2_1.f18782b8e9a553ed6bc7.ttf" as="font" type="font/ttf" crossorigin />
-    <link rel="preload" href="https://eldritch-horror.onrender.com/static/media/EldritchNumbers.ef6bc856cc65bfbe29fe.otf" as="font" type="font/otf" crossorigin />
+    <link rel="preload" href="https://eldritch-horror.onrender.com/static/media/EldritchNumbers.ef6bc856cc65bfbe29fe.otf" as="font" type="font/otf" crossorigin /> -->
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Eldritch_logo.59bd7715e880198cddfb.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Azathoth.c87edfd070508b6627ae.jpg" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Yog-Sothoth.50cad0e7c4746875b237.jpg" />
@@ -133,12 +132,12 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenWindWalkerSlayed.a4bf85c24fb75c9ef201.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenSpinnerOfWebsSlayed.59de5c9eb4592b5270e4.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenMonsterToughness.be518e8440f70c2e9a94.png" />
-    <link rel="preload" as="image" href="" />
+    <!-- <link rel="preload" as="image" href="" /> -->
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenTheAmazon.2349fe8fa9bf8e2f964c.png" />
+    <!-- <link rel="preload" as="image" href="" />
     <link rel="preload" as="image" href="" />
     <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" /> -->
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/MythosMattBlue.4e0a74435e013480bbe7.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/MythosMattYellow.daa23264ba9713df2ad2.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_EG1.f48ab3112230fed9c51b.png" />
