--- a/public/index.html
+++ b/public/index.html
@@ -132,12 +132,12 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenWindWalkerSlayed.a4bf85c24fb75c9ef201.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenSpinnerOfWebsSlayed.59de5c9eb4592b5270e4.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenMonsterToughness.be518e8440f70c2e9a94.png" />
-    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenAntarctica.bcaf5c5029d5521e8731.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenTheAmazon.2349fe8fa9bf8e2f964c.png" />
-    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenTheHeartOfAfrica.5fa6265667ed649c277b.png />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenTheHimalayas.bd932c19afbfa2b0d5e3.png" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenThePyramids.cc0017d9bb0bb8f44d23.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenTunguska.de05b2dd3a4504418940.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/MythosMattBlue.4e0a74435e013480bbe7.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/MythosMattYellow.daa23264ba9713df2ad2.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_EG1.f48ab3112230fed9c51b.png" />
