--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
         font-family: EldritchIcons; 
         font-size: 23vh;
         font-weight: 200;
-        color: rgb(0, 0, 0);
+        color: transparent;
       }
 
     </style>
@@ -111,7 +111,6 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenClueFaded.fa8e122e414f2c0a7da1.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenClueCrossedOut.14ed79574c178f07ac1a.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenEldritch.0a81fd93b1e51e6b947c.png" />
-    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenEldritchFaded.8eb8f59da4cea6442eaa.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenEldritchDarkened.0c2a4789bd1f3794ee17.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenHealth.ef024d0b49bc3b6c1666.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenHealthDarkened.a8014188af4572579aaf.png" />
