Working EB3 with links

--- a/public/index.html
+++ b/public/index.html
@@ -87,6 +87,7 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionTheHimalayas.87947116f6123b41ba3f.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionThePyramids.895f8be55827f6eeef3c.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionTunguska.839cc2784b85cec1145d.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionDefeat.aebd8a1703d8c627a638.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuResearch.7c4f92b780d7c6bf4c89.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuSpecial.5bde04014867f8129e3f.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Cthulhu_Mystery_Front_1.ee1a45df52bb922ab015.png" />
@@ -132,11 +133,23 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenSpinnerOfWebsSlayed.59de5c9eb4592b5270e4.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenMonsterToughness.be518e8440f70c2e9a94.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenAntarctica.bcaf5c5029d5521e8731.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenAntarcticaSmall.bb12f14004f10ba4e1aa.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenAntarcticaCrossedOut.f7ba2c93f2edd9ce99d2.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenTheAmazon.2349fe8fa9bf8e2f964c.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenTheAmazonSmall.0523e15e069866b43709.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenTheAmazonCrossedOut.edc10ac75ef8274457aa.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenTheHeartOfAfrica.5fa6265667ed649c277b.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenTheHeartOfAfricaSmall.69856e0475bce3faad46.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenTheHeartOfAfricaCrossedOut.56e4018497f4d0c5a196.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenTheHimalayas.bd932c19afbfa2b0d5e3.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenTheHimalayasSmall.c2ba3c1b2c57f2da3c83.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenTheHimalayasCrossedOut.44b7250369ab1e7dc105.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenThePyramids.cc0017d9bb0bb8f44d23.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenThePyramidsSmall.4a01b073b7ac0d07fd80.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenThePyramidsCrossedOut.c1c7887fe27661d37778.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenTunguska.de05b2dd3a4504418940.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenTunguskaSmall.5df4cb2380e0431eac10.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenTunguskaCrossedOut.4acfcbbd74c7a545267f.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/MythosMattBlue.4e0a74435e013480bbe7.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/MythosMattYellow.daa23264ba9713df2ad2.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_EG1.f48ab3112230fed9c51b.png" />
