--- a/public/index.html
+++ b/public/index.html
@@ -88,12 +88,28 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionThePyramids.895f8be55827f6eeef3c.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionTunguska.839cc2784b85cec1145d.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionDefeat.aebd8a1703d8c627a638.png" />
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuResearch.7c4f92b780d7c6bf4c89.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuSpecial.5bde04014867f8129e3f.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Cthulhu_Mystery_Front_1.ee1a45df52bb922ab015.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Cthulhu_Mystery_Front_2.db24d680760ed6831372.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Cthulhu_Mystery_Front_3.1dcf08f6757d82a558ec.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Cthulhu_Mystery_Front_4.65471c0315e9836a13c4.png" />
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/LvlEasy.c1c731f871fcced74b0c.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/LvlNormal.39fab74a064bd59dd774.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/LvlHard.0209a94174bb733daa69.png" />
@@ -282,6 +298,36 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionTunguska_Front_1.8390f3191c6d213bb492.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionTunguska_Front_2.d41d5c218d0bb47c9f33.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionTunguska_Front_3.3227d5f20383f52a1353.png" />
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuResearch_Front_1.29efe200e8bcb0155128.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuResearch_Front_2.8ec90f77d38b66ec9a9f.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuResearch_Front_3.7d503aeaa19d3f4dcd76.png" />
